viewmodels/src/main/java/com/example/viewmodels/error/UiErrorMapper.kt
package com.example.viewmodels.error

interface UiErrorMapper<LogicError, UiError> {
    fun toUiError(error: LogicError): UiError?
}